# EcoPaste

./: Cargo.toml  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/plugins/backup/src/: commands.rs
src-tauri/src/plugins/synchronization/: Cargo.toml  build.rs
src-tauri/src/plugins/synchronization/permissions/: default.toml
src-tauri/src/plugins/synchronization/src/: commands.rs  error.rs  lib.rs
src/constants/: index.ts
src/database/: index.tsx
src/plugins/: backup.ts  synchronization.ts
src/stores/: synchronization.ts  webdav.ts
src/types/: store.d.ts
src/utils/: file.ts  path.ts  store.ts  webdav.ts
